--- a/about.html
+++ b/about.html
@@ -89,7 +89,10 @@
 </head>
 <body>
   <header>
-    <h1>🥛 Milko App</h1>
+      <div class="logo-left">
+    <img src="images/Graphicsfamily.png" alt="Milko Logo" class="logo">
+  </div>
+    <h1> Milko </h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
@@ -120,7 +123,7 @@
 
     <div class="about-image">
       <!-- free, copyright-free illustration -->
-      <img src="https://cdn-icons-png.flaticon.com/512/744/744465.png" alt="About Milko">
+      <img src="images/milkman_customer.png" alt="About Milko">
     </div>
   </section>
 
