--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 <body>
   <header>
-    <h1>🥛 Milko App</h1>
+      <div class="logo-left">
+    <img src="images/Graphicsfamily.png" alt="Milko Logo" class="logo">
+  </div>
+    <h1> Milko </h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
@@ -35,7 +38,7 @@
     </div>
 
     <div class="home-image">
-      <img src="https://cdn-icons-png.flaticon.com/512/744/744465.png" alt="Milk Delivery" />
+      <img src="images/milkman-is-working-on-the-laptop.svg" alt="Milk Delivery" />
     </div>
   </div>
 
