--- a/terms.html
+++ b/terms.html
@@ -82,7 +82,10 @@
 </head>
 <body>
   <header>
-    <h1>🥛 Milko App</h1>
+      <div class="logo-left">
+    <img src="images/Graphicsfamily.png" alt="Milko Logo" class="logo">
+  </div>
+    <h1> Milko </h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
