add logo in header

--- a/privacy.html
+++ b/privacy.html
@@ -35,10 +35,8 @@
 </head>
 <body>
   <header>
-      <div class="logo-left">
-    <img src="images/Graphicsfamily.png" alt="Milko Logo" class="logo">
-  </div>
-    <h1> Milko </h1>
+  
+     <img src="images/Graphicsfamily.png" alt="Milko Logo" style="height:100px;">
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
@@ -108,7 +106,7 @@
       </div>
       <div>
         <h3>Contact</h3>
-        <p>📧 support@milko.co.in<br>📞 +91-9876543210</p>
+        <p>📧 support@milko.co.in<br>📞 +91-9711120085</p>
       </div>
     </div>
     <div class="footer-bottom">
