--- a/terms.html
+++ b/terms.html
@@ -82,10 +82,8 @@
 </head>
 <body>
   <header>
-      <div class="logo-left">
-    <img src="images/Graphicsfamily.png" alt="Milko Logo" class="logo">
-  </div>
-    <h1> Milko </h1>
+  
+     <img src="images/Graphicsfamily.png" alt="Milko Logo" style="height:100px;">
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
