add delete account page

--- a/about.html
+++ b/about.html
@@ -89,7 +89,9 @@
 </head>
 <body>
   <header>
-    <h1>🥛 Milko App</h1>
+   
+  </div>
+   <img src="images/Graphicsfamily.png" alt="Milko Logo" style="height:100px;">
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
@@ -120,7 +122,7 @@
 
     <div class="about-image">
       <!-- free, copyright-free illustration -->
-      <img src="https://cdn-icons-png.flaticon.com/512/744/744465.png" alt="About Milko">
+      <img src="images/milkman_customer.png" alt="About Milko">
     </div>
   </section>
 
