--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
 </head>
 <body>
   <header>
-    <h1>🥛 Milko App</h1>
+    
+  </div>
+     <img src="images/Graphicsfamily.png" alt="Milko Logo" style="height:100px;">
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="privacy.html">Privacy Policy</a>
       <a href="terms.html">Terms & Conditions</a>
       <a href="contact.html">Contact</a>
+      <a href="delete-account.html">Delete Account</a>
     </nav>
   </header>
 
@@ -35,7 +38,7 @@
     </div>
 
     <div class="home-image">
-      <img src="https://cdn-icons-png.flaticon.com/512/744/744465.png" alt="Milk Delivery" />
+      <img src="images/milkman-is-working-on-the-laptop.svg" alt="Milk Delivery" />
     </div>
   </div>
 
