--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,9 @@
 </head>
 <body>
   <header>
-    <h1>🥛 Milko App</h1>
+    
+  </div>
+     <img src="images/Graphicsfamily.png" alt="Milko Logo" style="height:100px;">
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
