--- a/privacy.html
+++ b/privacy.html
@@ -35,7 +35,8 @@
 </head>
 <body>
   <header>
-    <h1>🥛 Milko App</h1>
+  
+     <img src="images/Graphicsfamily.png" alt="Milko Logo" style="height:100px;">
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
@@ -105,7 +106,7 @@
       </div>
       <div>
         <h3>Contact</h3>
-        <p>📧 support@milko.co.in<br>📞 +91-9876543210</p>
+        <p>📧 support@milko.co.in<br>📞 +91-9711120085</p>
       </div>
     </div>
     <div class="footer-bottom">
