--- a/terms.html
+++ b/terms.html
@@ -82,7 +82,8 @@
 </head>
 <body>
   <header>
-    <h1>🥛 Milko App</h1>
+  
+     <img src="images/Graphicsfamily.png" alt="Milko Logo" style="height:100px;">
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
