change header color and set footer

--- a/about.html
+++ b/about.html
@@ -104,20 +104,38 @@
   <section class="about-section">
     <div class="about-content">
       <h2>About Us</h2>
-      <p>We are on a mission to simplify milk delivery 🚀</p>
-      <p>
-        Milko is a <b>smart daily milk management app</b> designed for both 
-        customers and milkmen. We make sure your mornings start fresh with 
-        hassle-free milk delivery at your doorstep.
-      </p>
-      <p>
-        With Milko, you get <b>easy ordering, transparent billing, and timely delivery</b>.  
-        For milkmen, we provide <b>digital records, automated reminders, and customer tracking</b>.
-      </p>
-      <p>
-        🌟 Our vision is to build a <b>trustworthy digital bridge</b> between 
-        milk suppliers and families across India.  
-      </p>
+<p>
+  Milko is a <b>smart daily milk delivery app</b> designed to simplify life for both families and milkmen.  
+  Our mission is to ensure that every household receives <b>fresh, hygienic milk</b> every morning, hassle-free.
+</p>
+
+<p>
+  We connect <b>customers and milk suppliers</b> through a reliable digital platform, making milk management easier than ever.  
+  With Milko, you can <b>schedule deliveries, track orders, manage subscriptions</b>, and enjoy transparent billing.
+</p>
+
+<p>
+  For milkmen, Milko provides a <b>digital record-keeping system</b> that helps them track deliveries, automate billing, and manage customers efficiently.  
+  This reduces manual errors and allows milkmen to focus on providing quality service.
+</p>
+
+<h3>Our Vision</h3>
+<p>
+  To build a <b>trustworthy digital bridge</b> between milk suppliers and families across India, ensuring reliability, convenience, and transparency.
+</p>
+
+<h3>Our Mission</h3>
+<ul>
+  <li>Deliver fresh, high-quality milk at your doorstep every morning</li>
+  <li>Make milk management simple and efficient for both customers and milkmen</li>
+  <li>Provide transparent billing and timely notifications</li>
+  <li>Support milk suppliers with digital tools to grow their business</li>
+</ul>
+
+<p>
+  Join Milko today and experience a <b>smarter, easier, and more reliable milk delivery service</b>.
+</p>
+
     </div>
 
     <div class="about-image">
@@ -127,7 +145,7 @@
   </section>
 
   <footer>
-    <p>© 2025 Milko App | All Rights Reserved</p>
+    <p>© 2025 Milko App | Operated by DigitalRocketships.LLP | All Rights Reserved</p>
   </footer>
 </body>
 </html>
