--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
   </form>
 </div>
   <footer>
-    <p>© 2025 Milko App | All Rights Reserved</p>
+    <p>© 2025 Milko App | Operated by DigitalRocketships.LLP | All Rights Reserved</p>
   </footer>
 </body>
 </html>
