--- a/privacy.html
+++ b/privacy.html
@@ -54,25 +54,57 @@
 
     <h3>1. Information We Collect</h3>
     <ul>
-      <li><strong>Contact Information:</strong> With your permission, we may access your phone’s contact list (READ_CONTACTS) to fetch your customers’ phone numbers directly so you can add them quickly without manual typing.</li>
-      <li><strong>Personal Details:</strong> Name, phone number, email address provided by you.</li>
-      <li><strong>Usage Data:</strong> Information about how you interact with the app.</li>
+      <li><strong>Contact Information:</strong>Contact Information: With your explicit permission, Milko may access your phone’s contact list (READ_CONTACTS) to fetch and securely store your customers’ phone numbers.  
+This allows you to add contacts quickly without manual typing. All contact information is stored **securely** on our servers and is **used solely to provide Milko services**.  
+We **do not share or sell your contacts** to any third parties.  
+All contact information is used solely to provide Milko services and **will not be used for unsolicited marketing or shared with advertisers**.
+
+You can revoke this permission at any time from your device settings.  
+By granting access, you consent to Milko using your contacts as described above. </li>
+      <li><strong>Personal Details:</strong> Information you provide, such as your name, phone number, and email address.  
+These details are used solely to create and manage your account, process orders, and communicate with you regarding Milko services.</li>
+
+<li><strong>Usage Data:</strong> Information about how you interact with the app, including pages visited, features used, and time spent.  
+This helps us improve the app, enhance user experience, and ensure smooth operation of Milko services.</li>
+
     </ul>
 
-    <h3>2. How We Use Your Information</h3>
-    <ul>
-      <li>To provide and improve the app’s features.</li>
-      <li>To help you add your customers’ phone numbers directly from your contacts.</li>
-      <li>To send you important notifications and updates.</li>
-    </ul>
+   <h3>2. How We Use Your Information</h3>
+<ul>
+  <li>To provide and improve the app’s features, ensuring a smooth and personalized experience.</li>
+  <li>To help you add your customers’ phone numbers directly from your contacts, with your explicit permission, and securely store them for app functionality.</li>
+  <li>To send you important notifications, updates, and information about your orders and app services.</li>
+  <li>To analyze app usage patterns and performance, helping us enhance usability and fix issues promptly.</li>
+  <li>To comply with legal obligations and protect the rights, property, or safety of Milko, its users, and others.</li>
+</ul>
+
 
     <h3>3. Data Sharing</h3>
-    <p>We do not sell or rent your personal data.  
-    We may share limited data only with trusted third-party services that help us operate the app (such as hosting, analytics, or notification services).</p>
+<p>
+  We do not sell, trade, or rent your personal data to any third parties.  
+  We may share limited information only with trusted third-party services that help us operate the app, such as:
+</p>
+<ul>
+  <li>Hosting providers to ensure app availability and performance.</li>
+  <li>Analytics services to understand app usage and improve features.</li>
+  <li>Notification services to send you timely alerts and updates.</li>
+</ul>
+<p>
+  All shared data is handled securely and only for the specific purpose of providing and improving Milko services.  
+  We take appropriate measures to ensure that third parties adhere to strict data protection standards.
+</p>
 
-    <h3>4. Data Security</h3>
-    <p>We use industry-standard security measures to protect your data.  
-    However, no method of transmission over the internet is 100% secure.</p>
+
+   <h3>4. Data Security</h3>
+<p>
+  We take the security of your personal information seriously and implement industry-standard measures to protect it.  
+  This includes encryption, secure servers, and access controls to safeguard your data from unauthorized access, alteration, or disclosure.
+</p>
+<p>
+  However, please note that no method of transmission over the internet or electronic storage is completely secure.  
+  While we strive to use commercially acceptable means to protect your data, we cannot guarantee absolute security.
+</p>
+
 
     <h3>5. Your Choices</h3>
     <ul>
@@ -84,10 +116,37 @@
     <p>We may update this Privacy Policy from time to time.  
     The updated version will always be available on this page.</p>
 
-    <h3>7. Contact Us</h3>
+  <h3>7. Governing Law & Jurisdiction</h3>
+<p>
+  This Privacy Policy and any disputes arising out of or in connection with it shall be governed by the laws of India.  
+  Any legal action or proceedings related to this policy must be brought exclusively in the courts located in the district and state where Digital Rocketships is registered.
+</p>
+
+    <h3>8. Disclaimer / Limitation of Liability</h3>
+<p>
+  Milko endeavors to provide accurate and up‑to‑date information and services through its app and website.  
+  However, Milko shall not be liable for any direct, indirect, incidental, special, consequential or punitive damages, or any loss of profits or revenues, arising out of or in connection with your access to or use of the services, or reliance on any third‑party content or services.
+</p>
+<p>
+  We may update this policy from time to time; please refer to the latest version published on our website/app. For specific legal advice regarding your circumstances, consult a qualified attorney.
+</p>
+
+<h3>Disclaimer / </h3>
+<p>
+  Milko अपने ऐप एवं वेबसाइट पर उपलब्ध सूचनाओं और सेवाओं के बारे में यथासंभव सही और अप‑टू‑डेट जानकारी प्रदान करने का प्रयास करता है।  
+  फिर भी, Milko किसी भी प्रकार की प्रत्यक्ष, अप्रत्यक्ष, दंडनीय, आकस्मिक, विशेष या परिणामी हानि के लिए जिम्मेदार नहीं होगा जो आप या किसी तीसरे पक्ष को हमारी सेवाओं के उपयोग, काम न करने, या किसी तृतीय‑पक्ष से जुड़ी सामग्री/सर्विस के कारण हो सकती हैं।  
+</p>
+<p>
+  इस पॉलिसी और प्रैक्टिस में किसी भी बदलाव की जानकारी हम समय‑समय पर अपडेट कर सकते हैं; अंतिम निर्णय के लिए वेबसाइट/ऐप पर प्रकाशित नवीनतम नीति को देखें।  
+  यदि आप सुनिश्चित होना चाहते हैं कि आपकी विशिष्ट कानूनी स्थिति कैसे प्रभावित होगी तो कृपया एक योग्य वकील से सलाह लें।
+</p>
+
+  <h3>9. Contact Us</h3>
     <p>If you have any questions about this Privacy Policy, please contact us:</p>
     <p>📧 Email: <strong>digitalrocketships@gmail.com</strong><br>
     🏢 Company: <strong>Digital Rocketships</strong></p>
+
+
   </div>
 
   <footer>
@@ -110,7 +169,7 @@
       </div>
     </div>
     <div class="footer-bottom">
-      <p>© 2025 Milko App | All Rights Reserved</p>
+      <p>© 2025 Milko App | Operated by DigitalRocketships.LLP | All Rights Reserved</p>
     </div>
   </footer>
 </body>
