--- a/terms.html
+++ b/terms.html
@@ -47,7 +47,7 @@
     }
 
     h2 {
-      color: #0077b6;
+      color: #537CC3;
       margin-top: 30px;
       margin-bottom: 15px;
       border-bottom: 2px solid #eee;
@@ -87,7 +87,8 @@
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
-      <a href="terms.html">Legal</a>
+       <a href="privacy.html">Privacy Policy</a>
+      <a href="terms.html">Terms & Conditions</a>
       <a href="contact.html">Contact</a>
     </nav>
   </header>
