--- a/delete-account.html
+++ b/delete-account.html
@@ -21,12 +21,7 @@ button { width:100%; padding:12px; margin-top:10px; border:none; border-radius:6
 
 <!-- Header (same as home page) -->
 <header>
-<h1 class="site-title">
-  <img src="images/Graphicsfamily.png" alt="Milko Logo">
-  Milko
-</h1>
-
-
+ <img src="images/Graphicsfamily.png" alt="Milko Logo" style="height:100px;">
   <nav>
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
@@ -63,12 +58,7 @@ button { width:100%; padding:12px; margin-top:10px; border:none; border-radius:6
   <div class="footer-container">
     <div>
       <h4>Milko</h4>
-      <p>© 2025 Milko App | All Rights Reserved</p>
-    </div>
-    <div class="social-icons">
-      <a href="#">F</a>
-      <a href="#">T</a>
-      <a href="#">I</a>
+      <p>© 2025 Milko App | Operated by DigitalRocketships.LLP | All Rights Reserved</p>
     </div>
   </div>
 </footer>
