--- a/terms.html
+++ b/terms.html
@@ -16,7 +16,7 @@
     }
 
     header {
-      background: #0077b6;
+      background: #537CC3;
       color: #fff;
       padding: 20px;
       text-align: center;
