--- a/contact.html
+++ b/contact.html
@@ -5,42 +5,57 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    .contact-container {
+      text-align: center;
+      padding: 50px 20px;
+    }
+    .contact-container h2 {
+      font-size: 28px;
+      margin-bottom: 15px;
+    }
+    .contact-container p {
+      font-size: 16px;
+      margin-bottom: 25px;
+      color: #444;
+    }
+    .whatsapp-btn {
+      display: inline-block;
+      background: #25d366;
+      color: white;
+      padding: 12px 25px;
+      border-radius: 8px;
+      font-size: 18px;
+      text-decoration: none;
+      transition: background 0.3s;
+    }
+    .whatsapp-btn:hover {
+      background: #1ebe5b;
+    }
+  </style>
 </head>
 <body>
   <header>
-    
-  </div>
-     <img src="images/Graphicsfamily.png" alt="Milko Logo" style="height:100px;">
+    <img src="images/Graphicsfamily.png" alt="Milko Logo" style="height:100px;">
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="privacy.html">Privacy Policy</a>
       <a href="terms.html">Terms & Conditions</a>
-      <a href="contact.html">Contact</a>
+      <a href="contact.html" class="active">Contact</a>
     </nav>
   </header>
-<div class="container">
-  <h2>Contact Us</h2>
-  <form action="https://formspree.io/f/your-form-id" method="POST" class="contact-form">
+
+  <div class="contact-container">
+    <h2>Contact Us</h2>
+    <p>Have questions or need help? Our team is just one click away.  
+    Connect with us directly on WhatsApp.</p>
     
-    <div class="form-group">
-      <label for="name">Your Name:</label>
-      <input type="text" id="name" name="name" required>
-    </div>
+    <a class="whatsapp-btn" href="https://wa.me/919876543210?text=Hello%20Milko%20Team%2C%20I%20need%20some%20help%20with%20your%20app." target="_blank">
+      💬 Chat on WhatsApp
+    </a>
+  </div>
 
-    <div class="form-group">
-      <label for="email">Your Email:</label>
-      <input type="email" id="email" name="email" required>
-    </div>
-
-    <div class="form-group full-width">
-      <label for="message">Your Message:</label>
-      <textarea id="message" name="message" rows="5" required></textarea>
-    </div>
-
-    <button type="submit">Send Message</button>
-  </form>
-</div>
   <footer>
     <p>© 2025 Milko App | Operated by DigitalRocketships.LLP | All Rights Reserved</p>
   </footer>
