--- a/privacy.html
+++ b/privacy.html
@@ -172,5 +172,19 @@ This helps us improve the app, enhance user experience, and ensure smooth operat
       <p>© 2025 Milko App | Operated by DigitalRocketships.LLP | All Rights Reserved</p>
     </div>
   </footer>
+  <script>
+  window.addEventListener('DOMContentLoaded', () => {
+    const isEmbedded = window.location.search.includes('embedded=true');
+
+    if(isEmbedded) {
+      const header = document.querySelector('header');
+      const footer = document.querySelector('footer');
+      
+      if(header) header.style.display = 'none';
+      if(footer) footer.style.display = 'none';
+    }
+  });
+</script>
+
 </body>
 </html>
