--- a/privacy.html
+++ b/privacy.html
@@ -48,8 +48,8 @@
 
   <div class="policy-container">
     <h2>Privacy Policy</h2>
-    <p><strong>Last updated:</strong> 20/08/2025</p>
-    <p>Digital Rocketships (“we”, “our”, or “us”) operates the Milko Biz mobile application (the “App”).  
+    <p><strong>Last updated:</strong> 29/09/2025</p>
+    <p>Digital Rocketships (“we”, “our”, or “us”) operates the Milko (Milko Biz ) mobile application (the “App”).  
     This Privacy Policy explains how we collect, use, and protect your personal information when you use our App.</p>
 
     <h3>1. Information We Collect</h3>
@@ -151,22 +151,6 @@ This helps us improve the app, enhance user experience, and ensure smooth operat
 
   <footer>
     <div class="footer-container">
-      <div>
-        <h3>About Milko</h3>
-        <p>Milko Biz is your smart daily milk delivery app 🚀. We connect milkmen and customers to make milk delivery simple, transparent, and hassle-free.</p>
-      </div>
-      <div>
-        <h3>Quick Links</h3>
-        <a href="index.html">Home</a><br>
-        <a href="about.html">About</a><br>
-        <a href="privacy.html">Privacy Policy</a><br>
-        <a href="terms.html">Terms & Conditions</a><br>
-        <a href="contact.html">Contact</a>
-      </div>
-      <div>
-        <h3>Contact</h3>
-        <p>📧 support@milko.co.in<br>📞 +91-9711120085</p>
-      </div>
     </div>
     <div class="footer-bottom">
       <p>© 2025 Milko App | Operated by DigitalRocketships.LLP | All Rights Reserved</p>
@@ -185,6 +169,5 @@ This helps us improve the app, enhance user experience, and ensure smooth operat
     }
   });
 </script>
-
 </body>
 </html>
