--- a/terms.html
+++ b/terms.html
@@ -147,7 +147,7 @@
     <hr>
 
     <h2>Disclaimer</h2>
-    <p><b>Last updated: 22/08/2025</b></p>
+    <p><b>Last updated: 29/09/2025</b></p>
 
     <ul>
       <li>The app is provided on an “as-is” and “as-available” basis without any warranties, guarantees, or assurances.</li>
@@ -166,5 +166,18 @@
     <p>© 2025 Milko App | Operated by DigitalRocketships.LLP | All Rights Reserved</p>
     <p>This document is a legal agreement between the user and the company. Continued use of the app confirms acceptance.</p>
   </footer>
+  <script>
+  window.addEventListener('DOMContentLoaded', () => {
+    const isEmbedded = window.location.search.includes('embedded=true');
+
+    if(isEmbedded) {
+      const header = document.querySelector('header');
+      const footer = document.querySelector('footer');
+      
+      if(header) header.style.display = 'none';
+      if(footer) footer.style.display = 'none';
+    }
+  });
+</script>
 </body>
 </html>
