--- a/terms.html
+++ b/terms.html
@@ -96,7 +96,7 @@
   <div class="container">
 
     <h2>Terms & Conditions</h2>
-    <p><b>Last updated: 22/08/2025</b></p>
+    <p><b>Last updated: 29/09/2025</b></p>
 
     <p>By accessing or using Milko App (“the App”), you agree to the following Terms & Conditions. These Terms are designed to protect both the company <b>DigitalRocketships LLP</b> (operator of Milko App) and its users (milkmen and customers). Please read them carefully.</p>
 
@@ -135,7 +135,7 @@
     <hr>
 
     <h2>Refund Policy</h2>
-    <p><b>Last updated: 22/08/2025</b></p>
+    <p><b>Last updated: 29/09/2025</b></p>
 
     <ul>
       <li>Milko App does not accept or process payments.</li>
@@ -157,7 +157,7 @@
     </ul>
 
     <div style="background:#f8f9fa;padding:15px;border-left:4px solid #0077b6;margin-top:20px;border-radius:6px;">
-      <p><b>Important:</b> By using Milko App, both milkmen and customers agree that they cannot bring any legal claim, compensation request, or liability case against <b>DigitalRocketships.LLP</b> or <b>Milko App</b> for issues related to milk delivery, product quality, pricing, or payment disputes.</p>
+      <p><b>Important:</b> By using Milko App, both milkmen and customers agree that they cannot bring any legal claim, compensation request, or liability case against <b>DigitalRocketships.LLP</b> or <b>Milko , Milko Biz App</b> for issues related to milk delivery, product quality, pricing, or payment disputes.</p>
     </div>
 
   </div>
