--- a/privacy.html
+++ b/privacy.html
@@ -49,7 +49,7 @@
   <div class="policy-container">
     <h2>Privacy Policy</h2>
     <p><strong>Last updated:</strong> 29/09/2025</p>
-    <p>Digital Rocketships (“we”, “our”, or “us”) operates the Milko (Milko Biz ) mobile application (the “App”).  
+    <p>Digital Rocketships (“we”, “our”, or “us”) operates the Milko , Milko Biz  mobile application (the “App”).  
     This Privacy Policy explains how we collect, use, and protect your personal information when you use our App.</p>
 
     <h3>1. Information We Collect</h3>
