update term and condition and privacy

--- a/terms.html
+++ b/terms.html
@@ -93,10 +93,10 @@
     </nav>
   </header>
 
-  <div class="container">
+ <div class="container">
 
     <h2>Terms & Conditions</h2>
-    <p><b>Last updated: 29/09/2025</b></p>
+    <p><b>Last updated: 30/09/2025</b></p>
 
     <p>By accessing or using Milko App (“the App”), you agree to the following Terms & Conditions. These Terms are designed to protect both the company <b>DigitalRocketships LLP</b> (operator of Milko App) and its users (milkmen and customers). Please read them carefully.</p>
 
@@ -132,10 +132,22 @@
     <h3>5. Changes to Terms</h3>
     <p>The company reserves the right to modify these Terms at any time without prior notice. Continued use of the app means you accept the updated Terms.</p>
 
+    <h3>6. User Data & Permissions</h3>
+    <p>By using Milko App, you acknowledge and consent that the app may request certain permissions to provide its services:</p>
+    <ul>
+      <li><strong>Contacts:</strong> To quickly add customers from your phonebook (<code>READ_CONTACTS</code>).</li>
+      <li><strong>Media & Camera:</strong> To upload profile pictures or other app-related images (<code>READ_MEDIA_IMAGES</code> & <code>CAMERA</code>).</li>
+      <li><strong>Location:</strong> To auto-fill delivery addresses and provide location-based services (<code>ACCESS_FINE_LOCATION</code> & <code>ACCESS_COARSE_LOCATION</code>).</li>
+      <li><strong>Phone Calls:</strong> Optional permission to make direct calls to customers (<code>CALL_PHONE</code>).</li>
+      <li><strong>SMS:</strong> To read OTPs for automatic verification (<code>RECEIVE_SMS</code>).</li>
+      <li><strong>Analytics:</strong> Milko uses Microsoft Clarity SDK to collect anonymized session replay data, heatmaps, and analytics for improving the app. No sensitive personal information is collected.</li>
+    </ul>
+    <p>You can deny or revoke any permission at any time from your device settings. Refusal of optional permissions may limit some app features.</p>
+
     <hr>
 
     <h2>Refund Policy</h2>
-    <p><b>Last updated: 29/09/2025</b></p>
+    <p><b>Last updated: 30/09/2025</b></p>
 
     <ul>
       <li>Milko App does not accept or process payments.</li>
@@ -147,20 +159,22 @@
     <hr>
 
     <h2>Disclaimer</h2>
-    <p><b>Last updated: 29/09/2025</b></p>
+    <p><b>Last updated: 30/09/2025</b></p>
 
     <ul>
       <li>The app is provided on an “as-is” and “as-available” basis without any warranties, guarantees, or assurances.</li>
       <li>The company does not guarantee the accuracy, reliability, or completeness of data shared between users.</li>
       <li>Milko App is not liable for service interruptions, technical errors, or data loss.</li>
+      <li>Milko App uses Microsoft Clarity for anonymized analytics; the company is not liable for the data collected through this service.</li>
       <li>By using the app, you acknowledge that all risks (business, financial, or personal) are solely yours.</li>
     </ul>
 
     <div style="background:#f8f9fa;padding:15px;border-left:4px solid #0077b6;margin-top:20px;border-radius:6px;">
-      <p><b>Important:</b> By using Milko App, both milkmen and customers agree that they cannot bring any legal claim, compensation request, or liability case against <b>DigitalRocketships.LLP</b> or <b>Milko , Milko Biz App</b> for issues related to milk delivery, product quality, pricing, or payment disputes.</p>
+      <p><b>Important:</b> By using Milko App, both milkmen and customers agree that they cannot bring any legal claim, compensation request, or liability case against <b>DigitalRocketships.LLP</b> or <b>Milko, Milko Biz App</b> for issues related to milk delivery, product quality, pricing, payment disputes, or data collected via app permissions or analytics (Microsoft Clarity).</p>
     </div>
 
-  </div>
+</div>
+
 
   <footer>
     <p>© 2025 Milko App | Operated by DigitalRocketships.LLP | All Rights Reserved</p>
