--- a/privacy.html
+++ b/privacy.html
@@ -46,108 +46,97 @@
     </nav>
   </header>
 
-  <div class="policy-container">
+  <div class="policy-container"> 
     <h2>Privacy Policy</h2>
-    <p><strong>Last updated:</strong> 29/09/2025</p>
-    <p>Digital Rocketships (“we”, “our”, or “us”) operates the Milko , Milko Biz  mobile application (the “App”).  
+    <p><strong>Last updated:</strong> 30/09/2025</p>
+    <p>Digital Rocketships (“we”, “our”, or “us”) operates the Milko and Milko Biz mobile applications (the “App”).  
     This Privacy Policy explains how we collect, use, and protect your personal information when you use our App.</p>
 
     <h3>1. Information We Collect</h3>
     <ul>
-      <li><strong>Contact Information:</strong>Contact Information: With your explicit permission, Milko may access your phone’s contact list (READ_CONTACTS) to fetch and securely store your customers’ phone numbers.  
-This allows you to add contacts quickly without manual typing. All contact information is stored **securely** on our servers and is **used solely to provide Milko services**.  
-We **do not share or sell your contacts** to any third parties.  
-All contact information is used solely to provide Milko services and **will not be used for unsolicited marketing or shared with advertisers**.
+        <li><strong>Contact Information:</strong> With your explicit permission, Milko may access your phone’s contact list (<code>READ_CONTACTS</code>) to fetch and securely store your customers’ phone numbers.  
+        This allows you to add contacts quickly without manual typing. All contact information is stored securely and used solely to provide Milko services.  
+        We do not share or sell your contacts to any third parties. You can revoke this permission at any time from your device settings.</li>
 
-You can revoke this permission at any time from your device settings.  
-By granting access, you consent to Milko using your contacts as described above. </li>
-      <li><strong>Personal Details:</strong> Information you provide, such as your name, phone number, and email address.  
-These details are used solely to create and manage your account, process orders, and communicate with you regarding Milko services.</li>
+        <li><strong>Profile Photos & Media:</strong> With your permission, Milko may access your device images (<code>READ_MEDIA_IMAGES</code>) and camera (<code>CAMERA</code>) to let you upload profile pictures or other app-related images.  
+        Images are used only within the app and stored securely.</li>
 
-<li><strong>Usage Data:</strong> Information about how you interact with the app, including pages visited, features used, and time spent.  
-This helps us improve the app, enhance user experience, and ensure smooth operation of Milko services.</li>
+        <li><strong>Location Information:</strong> With your consent, Milko may access your device location using <code>ACCESS_FINE_LOCATION</code> (precise) and <code>ACCESS_COARSE_LOCATION</code> (approximate).  
+        This is used to auto-fill delivery addresses, provide location-based services, and improve app functionality.</li>
 
+        <li><strong>Phone Calls:</strong> If you grant permission (<code>CALL_PHONE</code>), Milko may allow direct calls to your customers.  
+        This permission is optional and can be revoked anytime from device settings.</li>
+
+        <li><strong>Session Recordings, Heatmaps & Analytics:</strong> Milko uses <strong>Microsoft Clarity SDK</strong> to collect anonymized session replay data, heatmaps, and analytics.  
+        This helps us understand how users interact with the app, improve UI/UX, and identify performance issues.  
+        Microsoft Clarity may collect non-personal usage data as per their <a href="https://privacy.microsoft.com/" target="_blank">Privacy Policy</a>.  
+        No sensitive personal information (passwords, payment data, or contacts) is collected by Clarity.</li>
+
+        <li><strong>Crash & Performance Data:</strong> To help us improve stability and performance.</li>
+
+        <li><strong>Personal Details:</strong> Information you provide, such as your name, phone number, and email address. These details are used solely to create and manage your account, process orders, and communicate with you regarding Milko services.</li>
+
+        <li><strong>Usage Data:</strong> Screens visited, buttons clicked, navigation patterns, and interactions within the app.</li>
     </ul>
 
-   <h3>2. How We Use Your Information</h3>
-<ul>
-  <li>To provide and improve the app’s features, ensuring a smooth and personalized experience.</li>
-  <li>To help you add your customers’ phone numbers directly from your contacts, with your explicit permission, and securely store them for app functionality.</li>
-  <li>To send you important notifications, updates, and information about your orders and app services.</li>
-  <li>To analyze app usage patterns and performance, helping us enhance usability and fix issues promptly.</li>
-  <li>To comply with legal obligations and protect the rights, property, or safety of Milko, its users, and others.</li>
-</ul>
-
-
-    <h3>3. Data Sharing</h3>
-<p>
-  We do not sell, trade, or rent your personal data to any third parties.  
-  We may share limited information only with trusted third-party services that help us operate the app, such as:
-</p>
-<ul>
-  <li>Hosting providers to ensure app availability and performance.</li>
-  <li>Analytics services to understand app usage and improve features.</li>
-  <li>Notification services to send you timely alerts and updates.</li>
-</ul>
-<p>
-  All shared data is handled securely and only for the specific purpose of providing and improving Milko services.  
-  We take appropriate measures to ensure that third parties adhere to strict data protection standards.
-</p>
-
-
-   <h3>4. Data Security</h3>
-<p>
-  We take the security of your personal information seriously and implement industry-standard measures to protect it.  
-  This includes encryption, secure servers, and access controls to safeguard your data from unauthorized access, alteration, or disclosure.
-</p>
-<p>
-  However, please note that no method of transmission over the internet or electronic storage is completely secure.  
-  While we strive to use commercially acceptable means to protect your data, we cannot guarantee absolute security.
-</p>
-
-
-    <h3>5. Your Choices</h3>
+    <h3>2. How We Use Your Information</h3>
     <ul>
-      <li>You can deny or revoke contacts permission anytime from your device settings.</li>
-      <li>You may request deletion of your data by contacting us at: <strong>digitalrocketships@gmail.com</strong></li>
+        <li>To provide and improve the app’s features and ensure a smooth, personalized experience.</li>
+        <li>To allow quick addition of customers from your contacts securely, with your permission.</li>
+        <li>To upload and manage profile photos safely within the app.</li>
+        <li>To auto-fill delivery addresses and provide location-based services.</li>
+        <li>To allow optional calls to customers (if you grant permission).</li>
+        <li>To analyze app usage patterns, optimize UI/UX, fix bugs, and improve performance through Microsoft Clarity analytics.</li>
+        <li>To send important notifications, updates, and order information.</li>
+        <li>To comply with legal obligations and protect rights, property, and safety.</li>
     </ul>
 
-    <h3>6. Changes to This Policy</h3>
-    <p>We may update this Privacy Policy from time to time.  
-    The updated version will always be available on this page.</p>
+    <h3>3. Third-Party Services</h3>
+    <ul>
+        <li>We use the following third-party tools in our app:
+            <ul>
+                <li><strong>Microsoft Clarity:</strong> For session replay, heatmaps, and analytics. Microsoft may collect and process anonymized usage data.  
+                More information is available here: <a href="https://privacy.microsoft.com/" target="_blank">https://privacy.microsoft.com/</a></li>
+            </ul>
+        </li>
+        <li>You may request deletion of your data via <a href="https://www.milko.co.in/delete-account.html" target="_blank">this link</a> or by contacting us at <strong>digitalrocketships@gmail.com</strong></li>
+    </ul>
 
-  <h3>7. Governing Law & Jurisdiction</h3>
-<p>
-  This Privacy Policy and any disputes arising out of or in connection with it shall be governed by the laws of India.  
-  Any legal action or proceedings related to this policy must be brought exclusively in the courts located in the district and state where Digital Rocketships is registered.
-</p>
+    <h3>4. Data Sharing</h3>
+    <p>We do not sell, trade, or rent your personal data. Limited information may be shared with trusted third-party services to:</p>
+    <ul>
+        <li>Ensure app availability and performance (hosting providers).</li>
+        <li>Understand app usage and improve features (Microsoft Clarity and other analytics).</li>
+        <li>Send timely alerts and updates (notification services).</li>
+    </ul>
+    <p>All shared data is handled securely and only for providing and improving Milko services.</p>
 
-    <h3>8. Disclaimer / Limitation of Liability</h3>
-<p>
-  Milko endeavors to provide accurate and up‑to‑date information and services through its app and website.  
-  However, Milko shall not be liable for any direct, indirect, incidental, special, consequential or punitive damages, or any loss of profits or revenues, arising out of or in connection with your access to or use of the services, or reliance on any third‑party content or services.
-</p>
-<p>
-  We may update this policy from time to time; please refer to the latest version published on our website/app. For specific legal advice regarding your circumstances, consult a qualified attorney.
-</p>
+    <h3>5. Data Security</h3>
+    <p>We implement industry-standard measures to protect your data, including encryption, secure servers, and access controls.  
+    However, no method of electronic storage or transmission is completely secure. We cannot guarantee absolute security.</p>
 
-<h3>Disclaimer / </h3>
-<p>
-  Milko अपने ऐप एवं वेबसाइट पर उपलब्ध सूचनाओं और सेवाओं के बारे में यथासंभव सही और अप‑टू‑डेट जानकारी प्रदान करने का प्रयास करता है।  
-  फिर भी, Milko किसी भी प्रकार की प्रत्यक्ष, अप्रत्यक्ष, दंडनीय, आकस्मिक, विशेष या परिणामी हानि के लिए जिम्मेदार नहीं होगा जो आप या किसी तीसरे पक्ष को हमारी सेवाओं के उपयोग, काम न करने, या किसी तृतीय‑पक्ष से जुड़ी सामग्री/सर्विस के कारण हो सकती हैं।  
-</p>
-<p>
-  इस पॉलिसी और प्रैक्टिस में किसी भी बदलाव की जानकारी हम समय‑समय पर अपडेट कर सकते हैं; अंतिम निर्णय के लिए वेबसाइट/ऐप पर प्रकाशित नवीनतम नीति को देखें।  
-  यदि आप सुनिश्चित होना चाहते हैं कि आपकी विशिष्ट कानूनी स्थिति कैसे प्रभावित होगी तो कृपया एक योग्य वकील से सलाह लें।
-</p>
+    <h3>6. Your Choices</h3>
+    <ul>
+        <li>You can deny or revoke permissions (contacts, media, location, calls) anytime from device settings.</li>
+        <li>You may request deletion of your data by contacting us at <strong>digitalrocketships@gmail.com</strong></li>
+    </ul>
 
-  <h3>9. Contact Us</h3>
-    <p>If you have any questions about this Privacy Policy, please contact us:</p>
+    <h3>7. Changes to This Policy</h3>
+    <p>We may update this Privacy Policy from time to time. The latest version will always be available on this page.</p>
+
+    <h3>8. Governing Law & Jurisdiction</h3>
+    <p>This Privacy Policy is governed by the laws of India. Any legal action must be brought exclusively in the courts of the district and state where Digital Rocketships is registered.</p>
+
+    <h3>9. Disclaimer / Limitation of Liability</h3>
+    <p>Milko endeavors to provide accurate and up-to-date information and services. We are not liable for any direct, indirect, incidental, or consequential damages arising from the use of the app or third-party content.  
+    Refer to the latest policy version on our website/app. Consult a qualified attorney for legal advice regarding your circumstances.</p>
+
+    <h3>10. Contact Us</h3>
+    <p>If you have questions about this Privacy Policy, contact us at:</p>
     <p>📧 Email: <strong>digitalrocketships@gmail.com</strong><br>
     🏢 Company: <strong>Digital Rocketships</strong></p>
+</div>
 
-
-  </div>
 
   <footer>
     <div class="footer-container">
